--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -9,9 +9,10 @@ html
         meta(content="" name="keywords")
         meta(content="width=device-width, initial-scale=1" name="viewport")
         meta(content="ie=edge" http-equiv="x-ua-compatible")
-        link(rel="stylesheet" href="./assets/styles/app.min.css")
-        script(src="./assets/scripts/bundle.js" defer)
+        link(rel="stylesheet" href="./assets/styles/app.min.css")   
+        script(src="https://cdn.jsdelivr.net/npm/vue")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
+        script(src="./assets/scripts/bundle.js" defer)
 
     body
         .main-wrapper
