--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -10,11 +10,19 @@ html
         meta(content="width=device-width, initial-scale=1" name="viewport")
         meta(content="ie=edge" http-equiv="x-ua-compatible")
         link(rel="stylesheet" href="./assets/styles/app.min.css")   
+        link(rel="shortcut icon" type="image/x-icon" href="./assets/images/favicon.ico")
         script(src="https://cdn.jsdelivr.net/npm/vue")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
         script(src="./assets/scripts/bundle.js" defer)
 
-    body
+    body.overflow
+        .preloader
+            .preloader__wrapper
+                svg.preloader__circle-block(version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 120 120" width="120px" height="120px" enable-background="new 0 0 40.043 55.633" xml:space="preserve")
+                    circle.preloader__circle.preloader__circle--first(cx="20.021" cy="6" r="6")
+                    circle.preloader__circle.preloader__circle--second(cx="20.021" cy="6" r="4.5")
+                    circle.preloader__circle.preloader__circle--third(cx="20.021" cy="6" r="3")
+                .preloader__counter#counter(transform="matrix(1 0 0 1 0 47.8398)" font-family="'ArialMT'" font-size="24") 0
         .main-wrapper
             block content
             if (title != 'Добро пожаловать') && (title != 'Авторизация')
