--- a/src/styles/config/variables.scss
+++ b/src/styles/config/variables.scss
@@ -7,12 +7,7 @@ $dark: #373e42;
 $bg: #fbf8f1;
 $bg-beige: #eeebdf;
 
-// //resolutions
-// $smallDesktop: 1200px;
-// $tablets: 768px;
-// $phones: 480px;
-
-//resolutions for PP
-$smallDesktop: 1217px;
-$tablets: 785px;
-$phones: 497px;
+//resolutions
+$smallDesktop: 1200px;
+$tablets: 768px;
+$phones: 480px;
