--- a/src/templates/common/menu.pug
+++ b/src/templates/common/menu.pug
@@ -7,8 +7,8 @@
     ]
 
 nav.menu
-    h2 Меню
+    h2.menu__title.visually-hidden Меню
     ul.menu__list
         each item in menu__items
-            li.menu__item 
-                a(href="./"+item[0]+".html") #{item[1]}
+            li.menu__item.title-dec
+                a.menu__link(href="./"+item[0]+".html") #{item[1]}
