some fixes for js

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -16,7 +16,7 @@
 @import 'pages/authorization';
 @import 'pages/about';
 @import 'pages/blog';
-@import 'pages/my-works';
+@import 'pages/my_works';
 
 //commons
 @import 'common/menu';
