--- a/src/templates/pages/about.pug
+++ b/src/templates/pages/about.pug
@@ -3,6 +3,9 @@ extends ../template
 block variables
     - var title = 'Обо мне'
 
+block scripts
+    script(src="./assets/scripts/about.js" defer)
+
 block content
     .header
         .header__socials
