--- a/src/templates/pages/my_works.pug
+++ b/src/templates/pages/my_works.pug
@@ -3,6 +3,9 @@ extends ../template
 block variables
     - var title = 'Мои работы'
 
+block scripts
+    script(src="./assets/scripts/my_works.js" defer)
+
 block content
     .header
         .header__socials
