--- a/src/templates/pages/blog.pug
+++ b/src/templates/pages/blog.pug
@@ -4,6 +4,9 @@ block variables
     - var title = 'Блог'
     - var navBlog = ['Самое важное в SASS', 'Приёмы в вёрстке, без которых не обходится ни один сайт', 'Самый необходимый набор Gulp плагинов', 'Почему я выбрал Jade']
 
+block scripts
+    script(src="./assets/scripts/blog.js" defer)
+
 block content
     .header.header--min
         .header__socials
