--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -11,9 +11,8 @@ html
         meta(content="ie=edge" http-equiv="x-ua-compatible")
         link(rel="stylesheet" href="./assets/styles/app.min.css")   
         link(rel="shortcut icon" type="image/x-icon" href="./assets/images/favicon.ico")
-        script(src="https://cdn.jsdelivr.net/npm/vue")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
-        script(src="./assets/scripts/bundle.js" defer)
+        block scripts
 
     body.overflow
         .preloader
