some fixes for js

--- a/src/templates/common/footer.pug
+++ b/src/templates/common/footer.pug
@@ -1,6 +1,6 @@
 - 
     var nav = [
-        ['my-works', 'Мои работы'],
+        ['my_works', 'Мои работы'],
         ['about', 'Обо мне'],
         ['blog', 'Блог'],
         ['authorization', 'Авторизация']
