--- a/src/templates/common/menu.pug
+++ b/src/templates/common/menu.pug
@@ -2,7 +2,7 @@
     var menu__items = [
         ['index', 'Главная'],
         ['about', 'Обо мне'],
-        ['my-works', 'Мои работы'],
+        ['my_works', 'Мои работы'],
         ['blog', 'Блог']
     ]
 
