--- a/src/styles/common/menu.scss
+++ b/src/styles/common/menu.scss
@@ -9,14 +9,22 @@
     justify-content: center;
     align-items: center;
     top: 0;
-    right: 0;
     z-index: 10;
     opacity: 0;
     transition: .5s;
+
+    &--right {
+        right: 0;
+    }
+
+    &--left {
+        left: 0;
+    }
 }
 
 .menu--active {
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     opacity: 1;
 }
