--- a/src/templates/pages/about.pug
+++ b/src/templates/pages/about.pug
@@ -23,7 +23,7 @@ block content
         svg.triangle(xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1000 85" preserveaspectratio="none")
             polygon.triangle__part(points="0,0   0,86   500.8,86   500.8,75.5")
             polygon.triangle__part.triangle__part--biege(points="1000,0   1000,86   500,86   500,75.5")
-    .about
+    .main.about
         .about__column.about__column--left
             h1.about__title.title-dec Обо мне
             .about__block
