--- a/src/templates/pages/blog.pug
+++ b/src/templates/pages/blog.pug
@@ -2,7 +2,14 @@ extends ../template
 
 block variables
     - var title = 'Блог'
-    - var navBlog = ['Самое важное в SASS', 'Приёмы в вёрстке, без которых не обходится ни один сайт', 'Самый необходимый набор Gulp плагинов', 'Почему я выбрал Jade']
+    - 
+        var 
+        navBlog = [
+        'Самое важное в SASS',
+        'Приёмы в вёрстке, без которых не обходится ни один сайт',
+        'Самый необходимый набор Gulp плагинов',
+        'Почему я выбрал Jade'
+        ]
 
 block scripts
     script(src="./assets/scripts/blog.js" defer)
@@ -27,7 +34,7 @@ block content
             polygon.triangle__part(points="0,0   0,86   500.8,86   500.8,75.5")
             polygon.triangle__part(points="1000,0   1000,86   500,86   500,75.5")
 
-    .blog__wrap
+    .main.blog__wrap
         .blog
             .blog__nav.nav-blog
                 ul.nav-blog__list
@@ -43,9 +50,23 @@ block content
                             .blog__desc-text
                                 p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
                                 p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
-                            .blog__desc-snippet
-                                img.blog__desc-img(src="assets/images/snippet.jpg")
+                            .blog__desc-snippet(style="background-image: url(assets/images/snippet.jpg)")
+                                img.blog__desc-img.visually-hidden(src="assets/images/snippet.jpg")
                     li.blog__item
+                        h2.blog__title.subtitle Приёмы в вёрстке, без которых не обходится ни один сайт
+                        .blog__data 13 ноября 2016
+                        .blog__desc
+                            .blog__desc-text
+                                p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
+                                p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
+                    li.blog__item.visually-hidden
+                        h2.blog__title.subtitle Приёмы в вёрстке, без которых не обходится ни один сайт
+                        .blog__data 13 ноября 2016
+                        .blog__desc
+                            .blog__desc-text
+                                p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
+                                p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
+                    li.blog__item.visually-hidden
                         h2.blog__title.subtitle Приёмы в вёрстке, без которых не обходится ни один сайт
                         .blog__data 13 ноября 2016
                         .blog__desc
