--- a/src/templates/pages/blog.pug
+++ b/src/templates/pages/blog.pug
@@ -36,11 +36,14 @@ block content
 
     .main.blog__wrap
         .blog
-            .blog__nav.nav-blog
-                ul.nav-blog__list
-                    each item in navBlog
-                        li.nav-blog__item
-                            a.nav-blog__link(href="") #{item}
+            .blog__left
+                .blog__nav.nav-blog
+                    svg.blog__circle-block(viewBox="0 0 25 50")
+                        circle.blog__circle(r="25" cx="0%" cy="50%" fill="none")
+                    ul.nav-blog__list
+                        each item in navBlog
+                            li.nav-blog__item
+                                .nav-blog__link #{item}
             .blog__content
                 ul.blog__list
                     li.blog__item
@@ -59,15 +62,15 @@ block content
                             .blog__desc-text
                                 p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
                                 p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
-                    li.blog__item.visually-hidden
-                        h2.blog__title.subtitle Приёмы в вёрстке, без которых не обходится ни один сайт
+                    li.blog__item
+                        h2.blog__title.subtitle Самый необходимый набор Gulp плагинов
                         .blog__data 13 ноября 2016
                         .blog__desc
                             .blog__desc-text
                                 p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
                                 p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
-                    li.blog__item.visually-hidden
-                        h2.blog__title.subtitle Приёмы в вёрстке, без которых не обходится ни один сайт
+                    li.blog__item
+                        h2.blog__title.subtitle Почему я выбрал Jade
                         .blog__data 13 ноября 2016
                         .blog__desc
                             .blog__desc-text
