--- a/src/templates/pages/my_works.pug
+++ b/src/templates/pages/my_works.pug
@@ -25,7 +25,7 @@ block content
             polygon.triangle__part(points="0,0   0,86   500.8,86   500.8,75.5")
             polygon.triangle__part(points="1000,0   1000,86   500,86   500,75.5")
 
-    .works 
+    .main.works 
         h1.works__title.title-dec Мои работы
             svg.title-shadow(width="300")
                 use(xlink:href="assets/images/sprite.svg#works_header")
