--- a/src/templates/common/slider.pug
+++ b/src/templates/common/slider.pug
@@ -1,10 +1,9 @@
 - 
     var 
     sliderItems = [
-        ["#", "1.png", 'some skills1', 'Сайт 1'],
-        ["#", "2.png", 'some skills2', 'Сайт 2'],
-        ["#", "3.png", 'some skills3', 'Сайт 3'],
-        ["#", "4.png", 'some skills4', 'Сайт 4']
+        ["http://cy01273.tmweb.ru/fit/intro.html", "1.png", 'HTML5, CSS3', 'Сайт фитнес-центра'],
+        ["http://cy01273.tmweb.ru/mrburger/", "2.png", 'HTML5, SASS, JS, Jquery, PHP', 'Лендинг бургерной'],
+        ["http://cy01273.tmweb.ru/portfolio", "3.png", 'PUG, SASS, JS, Jquery, Node.js, Mongo DB, VUE', 'Сайт-портфолио']
     ]
 
 ul.works-slider__control-list
