--- a/src/styles/common/technologies.scss
+++ b/src/styles/common/technologies.scss
@@ -113,66 +113,67 @@
     font: 500 14px 'roboto';
     color: $yellow;
 }
-.diagram__circle-block:hover .circle-0 {
+
+.diagram__circle-block--go .circle-0 {
     stroke-dasharray: .001 282.6;
 }
-.diagram__circle-block:hover .circle-5 {
+.diagram__circle-block--go .circle-5 {
     stroke-dasharray: 14.13 282.6;
 }
-.diagram__circle-block:hover .circle-10 {
+.diagram__circle-block--go .circle-10 {
     stroke-dasharray: 28.26 282.6;
 }
-.diagram__circle-block:hover .circle-15 {
+.diagram__circle-block--go .circle-15 {
     stroke-dasharray: 42.39 282.6;
 }
-.diagram__circle-block:hover .circle-20 {
+.diagram__circle-block--go .circle-20 {
     stroke-dasharray: 56.52 282.6;
 }
-.diagram__circle-block:hover .circle-25 {
+.diagram__circle-block--go .circle-25 {
     stroke-dasharray: 70.65 282.6;
 }
-.diagram__circle-block:hover .circle-30 {
+.diagram__circle-block--go .circle-30 {
     stroke-dasharray: 84.78 282.6;
 }
-.diagram__circle-block:hover .circle-35 {
+.diagram__circle-block--go .circle-35 {
     stroke-dasharray: 98.91 282.6;
 }
-.diagram__circle-block:hover .circle-40 {
+.diagram__circle-block--go .circle-40 {
     stroke-dasharray: 113.04 282.6;
 }
-.diagram__circle-block:hover .circle-45 {
+.diagram__circle-block--go .circle-45 {
     stroke-dasharray: 127.17 282.6;
 }
-.diagram__circle-block:hover .circle-50 {
+.diagram__circle-block--go .circle-50 {
     stroke-dasharray: 141.3 282.6;
 }
-.diagram__circle-block:hover .circle-55 {
+.diagram__circle-block--go .circle-55 {
     stroke-dasharray: 155.43 282.6;
 }
-.diagram__circle-block:hover .circle-60 {
+.diagram__circle-block--go .circle-60 {
     stroke-dasharray: 169.56 282.6;
 }
-.diagram__circle-block:hover .circle-65 {
+.diagram__circle-block--go .circle-65 {
     stroke-dasharray: 183.69 282.6;
 }
-.diagram__circle-block:hover .circle-70 {
+.diagram__circle-block--go .circle-70 {
     stroke-dasharray: 197.82 282.6;
 }
-.diagram__circle-block:hover .circle-75 {
+.diagram__circle-block--go .circle-75 {
     stroke-dasharray: 211.95 282.6;
 }
-.diagram__circle-block:hover .circle-80 {
+.diagram__circle-block--go .circle-80 {
     stroke-dasharray: 226.08 282.6;
 }
-.diagram__circle-block:hover .circle-85 {
+.diagram__circle-block--go .circle-85 {
     stroke-dasharray: 240.21 282.6;
 }
-.diagram__circle-block:hover .circle-90 {
+.diagram__circle-block--go .circle-90 {
     stroke-dasharray: 254.34 282.6;
 }
-.diagram__circle-block:hover .circle-95 {
+.diagram__circle-block--go .circle-95 {
     stroke-dasharray: 268.47 282.6;
 }
-.diagram__circle-block:hover .circle-100 {
+.diagram__circle-block--go .circle-100 {
     stroke-dasharray: 282.6 282.6;
 }
